syntax = "proto3";

package myconnect4;

message Empty {}

message Move {
  uint32 col = 1;
}

message MoveValid {
  bool valid = 1;
}

message GameOver {
  oneof kind {
    Winner winner = 1;
    Empty draw = 2;
  }
}

message Winner {
  bool user_won = 1;
}

message NewGame {
  uint64 game_id = 1;
  string rival = 2;
  bool first_turn = 3;
}


message GameEvent {
  oneof event {
    Move move = 3;
    MoveValid move_valid = 4;
    GameOver game_over = 5;
    Empty rival_left = 6;
    Empty search_game = 7;
    NewGame new_game = 8;
  }
}

message ServerState {
  string response = 1;
}

message SpawnSeveral {
  uint64 number = 1;
}

message PastGamesReq {
  uint64 number = 1;
}

message PastGamesResp {
  repeated PastGame past_games = 1;
}

message PastGame {
  uint64 game_id = 1;
  string board = 2;
  string game_over = 3;
  string end_time = 5;
}

service MyConnect4Service {
  rpc StreamEvents (stream GameEvent) returns (stream GameEvent);
  rpc QueryState (Empty) returns (ServerState);
  rpc SpawnSeveralBots (SpawnSeveral) returns (Empty);
  rpc QueryPastGames (PastGamesReq) returns (PastGamesResp);
}
